# unitree_go2_onnx_deploy

./: .gitignore  README.md
deploy/include/go2_deploy/: command_config.hpp  deploy_params.hpp  fault_history.hpp  fault_scenario.hpp  go2_controller.hpp  go2_lowlevel.hpp  go2_observation.hpp  go2_sport.hpp  onnx_fault_predictor.hpp  onnx_io_util.hpp  onnx_policy.hpp  scenario_config.hpp
deploy/robots/go2/: CMakeLists.txt  main.cpp
deploy/robots/go2/config/: config.yaml
deploy/src/: command_config.cpp  deploy_params.cpp  fault_history.cpp  fault_scenario.cpp  go2_controller.cpp  go2_lowlevel.cpp  go2_observation.cpp  go2_sport.cpp  onnx_fault_predictor.cpp  onnx_policy.cpp  scenario_config.cpp
policies/: README.md
policies/20260616_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor-alienware/: export_meta.json
policies/20260616_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor-alienware/exported/: fault_predictor.onnx  policy.onnx
policies/20260616_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor-alienware/params/: deploy.yaml
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.5-alienware/: export_meta.json
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.5-alienware/exported/: fault_predictor.onnx  policy.onnx
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.5-alienware/params/: deploy.yaml
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.6-raico/: export_meta.json
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.6-raico/exported/: fault_predictor.onnx  policy.onnx
policies/20260622_after8000_30000iteration_samethigh0.8_onestepworldmodel_10stephistoryfourthmlp_independentfaultpredictor_kp25kd0.6-raico/params/: deploy.yaml
policies/fault_predictor_20260616/: export_meta.json
policies/fault_predictor_20260616/exported/: policy.onnx
policies/fault_predictor_20260616/params/: deploy.yaml
scripts/: export_onnx_from_checkpoint.py  export_onnx_from_torchscript.py  setup_onnxruntime.sh
